# kaggle-Agent

./: .env template  .env.docker  .env_docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  README.md  agent.py  app.py  clear_generated_nb.sh  code_generation_agent.py  code_manager.py  config.ini  config_reader.py  dataUtils_agent.py  data_utils.py  datautils.py  description.txt  devcontainer.json  di_container.py  docker-compose.yml  executor_agent.py  house_price_model.pkl  jupyter-server-execution.py  kaggle.json  kaggle_scaper.py  kaggle_scraper.py  label_encoder.pkl  langgraph.json  log.txt  logistic_model.pkl  logistic_regression_model.pkl  main.py  my_notebook.ipynb  nbexecuter_e2b.py  nbexecutor.py  nbexecutor_autoGen.py  new_sandboxInt.py  notebook_requirements.txt  (+13 more)
.devcontainer/: devcontainer.json
docs/: 1403-06-13-progress-report.md  1403-07-30-progress-report.html  1403-07-30-progress-report.md  persian.md
examples/titanic-spaceship/20241019145405/: error_20241019150004_my_notebook.ipynb  error_20241019150227_my_notebook.ipynb  error_20241019150344_my_notebook.ipynb  error_20241019150433_my_notebook.ipynb  my_notebook.ipynb
executors/: nbexecuter_e2b.py  nbexecutor.py  nbexecutor_autoGen.py  nbexecutor_jupyter.py
important_notes/: important_notes.txt
input_titanic/: doc.txt  overview.md
kaggle_challenges_data/: data_details.md  description.md  evaluation.md
langfuse/: docker-compose.yml
logging_module/: log_it.py  logging.py
persistence/: mongo.py  postgres.py
plan/: plan.json
problem_data_spaceship/: dataset_desc.txt  description.txt
prompts/: code_generatino_prompt.py  code_generation_prompt.py  prompts.py  react.py  summarizer_prompt.py  task_enhancer.py  utils.py
states/: code.py  enhancer.py  main.py  memory.py  write_challenge_docs.py
submission/: submission.py
tests/: test_data_utils.py  test_memory_agent.py
