[tool.poetry]
name = "kaggle-agent-poet"
version = "0.1.0"
description = ""
authors = ["MSNP1381 <mohamandnematpoor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.3"
psycopg-pool = "^3.2.3"
langgraph = "^0.2.28"
langgraph-checkpoint-postgres = "^1.0.9"
jupyter-client = "^8.6.3"
httpx = "^0.27.2"
pymongo = "^4.9.1"
langchain-openai = "^0.2.1"
langfuse = "^2.51.2"
nbconvert = "^7.16.4"
nbformat = "^5.10.4"
selenium = "^4.25.0"
langchain = "^0.3.1"
markdownify = "^0.13.1"
python-dotenv = "^1.0.1"
injector = "^0.22.0"
pandas = "^2.2.3"
e2b-code-interpreter = "^0.0.10"
kaggle = "^1.6.17"
motor = "^3.6.0"
black = "^24.8.0"
ipykernel = "^6.29.5"
ipython = "^8.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
